# VehicleCodeScan

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data/: obd_codes.json
demo/: build_sample_report.py  upload-demo.html
i18n/: en.json  es.json
src/vehiclecodescan/: app.py  config.py
src/vehiclecodescan/cron/: purge.py
src/vehiclecodescan/email/: send.py
src/vehiclecodescan/parser/: foxwell.py  interpret.py
src/vehiclecodescan/report/: generator.py
src/vehiclecodescan/storage/: models.py
src/vehiclecodescan/utils/: files.py  i18n.py
src/vehiclecodescan/web/: auth.py  routes.py
templates/: upload.html
tests/: test_interpret.py  test_parser.py
